--- a/_src/app.scss
+++ b/_src/app.scss
@@ -17,10 +17,14 @@ html, body {
     > section,
     > footer {
         max-width: 900px;
-        padding: 0 40px;
-        margin: 60px auto 0;
+        padding: 0 30px;
+        margin: 40px auto 0;
         display: block;
         overflow: hidden;
+        @media screen and (min-width: 1024px) {
+            margin: 60px auto 0;
+            padding: 0 40px;
+        }
     }
 }
 
@@ -72,28 +76,44 @@ a {
 }
 
 p {
-    font: 400 24px/1.6667 "proxima-nova";
+    font: 400 20px/1.6667 "proxima-nova";
+    @media screen and (min-width: 1024px) {
+        font: 400 24px/1.6667 "proxima-nova";
+    }
     a {
-        font: 800 24px/1.6667 "proxima-nova";
+        font: 800 20px/1.6667 "proxima-nova";
+        @media screen and (min-width: 1024px) {
+            font: 800 24px/1.6667 "proxima-nova";
+        }
         letter-spacing: 0.25px;
         border-bottom: 2px solid #FFF;
     }
 }
-
 
 .avatar {
     border-radius: 50%;
     width: 100px;
     height: 100px;
     display: block;
-    float: left;
+    margin: 0 auto;
+    @media screen and (min-width: 1024px) {
+        float: left;
+    }
 }
 
 .name {
     display: block;
     float: left;
-    font: 700 48px/100px "proxima-nova";
-    padding: 0 30px;
+    width: 100%;
+    font: 700 36px/48px "proxima-nova";
+    text-align: center;
+    padding: 10px;
+    @media screen and (min-width: 1024px) {
+        text-align: left;
+        width: auto;
+        font: 700 48px/100px "proxima-nova";
+        padding: 0 30px;
+    }
 }
 
 .titles,
@@ -104,12 +124,19 @@ p {
 
 .titles {
     float: left;
-    font: 400 32px/1.5 "proxima-nova";
+    font: 400 26px/1.5 "proxima-nova";
     letter-spacing: 0.333px;
-    margin-top: 40px;
+    margin-top: 30px;
+    @media screen and (min-width: 1024px) {
+        margin-top: 40px;
+        font: 400 32px/1.5 "proxima-nova";
+    }
     a {
-        font: 800 32px/1.4 "proxima-nova";
+        font: 800 26px/1.4 "proxima-nova";
         letter-spacing: 0.666px;
+        @media screen and (min-width: 1024px) {
+            font: 800 32px/1.6667 "proxima-nova";
+        }
     }
 }
 
@@ -134,15 +161,15 @@ p {
 
 @keyframes clock {
     0% {
-        opacity: 0.75;
+        opacity: 0.5;
         transform: scale(1);
     }
     50% {
         opacity: 1;
-        transform: scale(1.05);
+        transform: scale(1.025);
     }
     100% {
-        opacity: 0.75;
+        opacity: 0.5;
         transform: scale(1);
     }
 }
@@ -217,24 +244,42 @@ p {
 
 .license {
     margin-top: 40px;
-    border-top: 1px solid rgba(#FFF,0.5);
+    border-top: 1px solid rgba(#FFF,0.25);
+    width: 100%;
     padding-top: 40px;
     float: left;
-    font: 400 16px/1 "proxima-nova";
+    font: 400 12px/1 "proxima-nova";
     letter-spacing: 1px;
     text-transform: uppercase;
     color: rgba(#FFF,0.6666);
 }
 
 #nyc {
-    margin-top: -120px;
+    margin: -120px 0 0;
+    padding: 0;
     z-index: -1;
     width: 100%;
     img {
         width: 100%;
+        float: left;
     }
 }
 
-// body {
-//   font: font-style font-variant font-weight font-size/line-height font-family;
-// }
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: scale(0.99);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+.loadIn    { animation: 300ms ease-in-out backwards fadeIn; }
+.avatar    { animation-delay: 620ms; }
+.name      { animation-delay: 700ms; }
+.titles    { animation-delay: 750ms; }
+.blurb     { animation-delay: 775ms; }
+#contact   { animation-delay: 787.5ms; }
+.license   { animation-delay: 793.75ms; }
