6am color change

--- a/_src/app.scss
+++ b/_src/app.scss
@@ -40,7 +40,7 @@ body {
 
     // gradients
     &.t5  { background: linear-gradient(#25383C, #000000); }
-    &.t6  { background: linear-gradient(#2A2D46, #9EE2FF); }
+    &.t6  { background: linear-gradient(#171930, #A8DCE7); }
     &.t7  { background: linear-gradient(#313A56, #B8EEFF); }
     &.t8  { background: linear-gradient(#405582, #E3EAFF); }
     &.t9  { background: linear-gradient(#376FB7, #B9D8ED); }
