--- a/_src/app.scss
+++ b/_src/app.scss
@@ -12,8 +12,8 @@ html, body {
         outline: 0;
         border: 0;
     }
-    overflow: hidden;
-    height: 100%;
+    //overflow: hidden;
+    //height: 100%;
     background: #222222;
 
     > header,
@@ -31,12 +31,19 @@ html, body {
             padding: 0 40px;
         }
     }
+    > header {
+        margin-top: 0;
+    }
 }
 
 body {
     color: #FFF;
     overflow-y: auto;
     transition: background-color 1000ms;
+    padding-top: 40px;
+    @media screen and (min-width: 1024px) {
+        padding-top: 60px;
+    }
 
     // gradients
     &.t5  { background: linear-gradient(#25383C, #000000); }
