--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
+<router-outlet></router-outlet>
+
 <div class="intro">
-    <h1>sean mcintyre, designer</h1>
+    <h1 routerLink="/">sean mcintyre, designer</h1>
     <a href="https://twitter.com/seanmcintyre" target="_blank">twitter</a>
     <a href="https://github.com/seanmcintyre" target="_blank">github</a>
     <a href="https://pinterest.com/smackies/" target="_blank">pinterest</a>
+    <a routerLink="/hire">hire me</a>
 </div>
