--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,6 +19,7 @@
     content: '';
     display: block;
     height: 40px;
+    border-radius: 5px;
     animation: name-bg 1.25s both 1.75s;
     position: absolute;
     bottom: 40px;
@@ -41,7 +42,8 @@
 
 .intro a:nth-child(2) { animation-delay: 3.2s; }
 .intro a:nth-child(3) { animation-delay: 3.4s; }
-.intro a:nth-child(4) { animation-delay: 3.6s; }
+.intro a:nth-child(4) { animation-delay: 3.575s; }
+.intro a:nth-child(5) { animation-delay: 3.725s; }
 
 .intro a:hover {
     transform: translate(-20px, -3px);
@@ -58,6 +60,7 @@
     left: 0;
     z-index: -1;
     transition: 200ms;
+    border-radius: 5px;
     transform:
         skew(-10deg)
         translateY(30%)
@@ -72,6 +75,49 @@
         skew(-5deg)
         translateY(0)
         rotate(0deg);
+}
+
+.stats {
+  width: 80%;
+  max-width: 900px;
+  margin:  0 0 10%;
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  transform: translateX(-50%);
+  background: white;
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.075);
+  border: 1px solid rgba(0, 0, 250, 0.05);
+  padding: 50px;
+  border-radius: 10px;
+}
+
+div.app {
+  width: 100%;
+  margin: 5px 0 0 0;
+  position: relative;
+  padding: 10px;
+  //border-bottom: 1px dashed rgba(0, 0, 0, 0.1);
+
+  .name {
+    width: 250px;
+    display: inline-block;
+    font-weight: 800;
+  }
+
+  .total {
+    opacity: 0.75;
+    font-style: italic;
+  }
+
+  .bg {
+    height: 100%;
+    position: absolute;
+    border-radius: 5px;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.1);
+  }
 }
 
 @keyframes type {
