--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,16 +1,41 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400');
+
+$fontstack: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
+$bg: black; //rgb(25,30,35); //rgb(241, 235, 236);
+
 html {
-  font-family: 'Fira Mono', monospace;
+  box-sizing: border-box;
+  font: 400 18px / 18px $fontstack;
+  -ms-overflow-style: scrollbar;
+  -webkit-tap-highlight-color: rgba(rgb(35, 155, 255), 0.1);
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  color: rgb(50, 50, 50);
+}
+
+@at-root {
+  @-ms-viewport { width: device-width; }
 }
 
 body {
-  max-width: 100%;
-  background: rgb(252, 252, 252);
+  padding: 0;
+  margin: 0;
+  min-height: 100vh;
+  background: linear-gradient(rgb(56, 49, 120),rgb(82, 122, 151)); //$bg;
 }
 
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
+*, *::before, *::after {
+  font: inherit;
+  font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  box-sizing: inherit;
   margin: 0;
   padding: 0;
+  vertical-align: baseline;
+  text-decoration: none;
+  color: inherit;
+  outline: 0;
+  background: transparent;
 }
