add clock component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,8 @@
   <a routerLink="/resume">Resume</a>
 </nav>
 
+<clock></clock>
+
 <h1>Sean McIntyre</h1>
 <span class="discipline">Product Designer, Engineer</span>
 
