disable for now

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,7 +1,7 @@
 <main>
   <h1>Sera Maya Saoirse</h1>
   <span class="discipline">UIxD Designer, Engineer</span>
-  <about *ngIf="showAbout"></about>
+  <!-- <about *ngIf="showAbout"></about> -->
 </main>
 
 <div class="slant"></div>
