--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,7 @@ body {
   padding: 0;
   margin: 0;
   min-height: 100vh;
-  background: linear-gradient(rgb(56, 49, 120),rgb(82, 122, 151)); //$bg;
+  background: rgb(40, 40, 40);
 }
 
 *, *::before, *::after {
