--- a/src/app/portfolio/lighthouse/lighthouse.component.scss
+++ b/src/app/portfolio/lighthouse/lighthouse.component.scss
@@ -6,7 +6,9 @@ main {
   width: calc(100% - 50px);
   height: calc(100vh - 40px);
   max-height: 1000px;
+  max-width: 600px;
   position: relative;
+  float: left;
 
   @media (min-width: 720px) and (orientation: portrait) {
     height: calc(50vh - 40px);
