--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,7 @@
   <div class="lighthouse"
     routerLink="/lighthouse">
     <logo-lighthouse></logo-lighthouse>
+    <span class="name">Lighthouse</span>
     <span class="role">Product, Brand Design</span>
     <span class="role">Front End</span>
     <span class="work-type">Contract</span>
@@ -25,6 +26,7 @@
 
   <div class="gust">
     <logo-gust></logo-gust>
+    <span class="name">Gust</span>
     <span class="role">Product Design</span>
     <span class="role">Front End</span>
   </div>
@@ -32,6 +34,7 @@
   <div class="sharewave">
     <!-- <logo-sharewave></logo-sharewave> -->
     <div class="logo"></div>
+    <span class="name">Sharewave</span>
     <span class="role">Product Design</span>
     <span class="role">Front End</span>
   </div>
@@ -39,6 +42,7 @@
   <div class="northstreet">
     <!-- <logo-northstreet></logo-northstreet> -->
     <div class="logo"></div>
+    <span class="name">North Street</span>
     <span class="role">Responsive Design</span>
     <span class="role">Front End</span>
     <span class="work-type">Contract</span>
@@ -46,16 +50,20 @@
 
   <div class="nox">
     <logo-nox></logo-nox>
+    <span class="name">Nox</span>
+    <span class="role">Founder</span>
   </div>
 
   <div class="holly">
     <logo-holly></logo-holly>
+    <span class="name">holly.yoga</span>
     <span class="role">Design</span>
     <span class="role">Development</span>
   </div>
 
   <div class="tedxslc">
     <logo-tedxslc></logo-tedxslc>
+    <span class="name">TEDxSLC</span>
     <span class="role">Co-Founder</span>
     <span class="role">Design, Production, Editing</span>
     <a href="https://www.youtube.com/results?search_query=TEDxSLC"
