--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -14,9 +14,9 @@
   // left: 50%;
   width: 600px;
   //transform: translate(-50%, -50%);
-  border: 1px solid rgba(white, 0.5);
+  border-left: 1px solid rgba(white, 0.5);
   border-radius: 3px;
-  background: rgba(black, 0.85);
+  //background: rgba(black, 0.85);
   animation: fadeIn 300ms 200ms both;
     text-align: left;
       line-height: 1.5em;
