new simple layout (sans portfolio for now)

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,13 +1,32 @@
-<p>Sean is a designer and software engineer from Texas, currently residing in Brooklyn. Her pronouns are <em>she</em> and <em>they</em>. She generally prefers <em>she</em> though, if you hadn't notice that about <em>her</em> yet! ❤️</p>
+<p>Sean is a designer and front end engineer from Texas, currently residing in Brooklyn.</p>
 
-<p>She has been passionate about design her entire, and she views the discipline as something far beyond the little shapes on your black mirror or the type of handle thoughtfully selected for a door. Design is fundamentally concerned with objects communicate—whether digital or physical. As the world spins increasingly faster, brighter, and louder, she believes the use of design thinking to simplify and elate our environments is of dire and progressive importance.</p>
+<p>Her pronouns are <em>she</em> and <em>they</em>.</p>
 
-<div>Fun facts about Sean:
+<!-- <p>She has been incredibly passionate about desing from a young, and she views the discipline far beyond the little shapes on your black mirror or the geometry of a handle thoughtfully selected for a door. Design is cocerned with commuication and interaction of objects—digital and physical. And as the world spins faster, brighter, and louder, she believes the use of design thinking to simplify and elate our environments is of critical importance.</p> -->
+
+<div class="fun">
+<h3>fun facts about Sean</h3>
   <ul>
-    <li>🧘🏻‍♀️ Buddhist/Athe<em>ish</em>, daily meditator</li>
-    <li>🌱 Aspiring to veganism (with wavering success)</li>
-    <li>🖌 Prefers to design <em>in & with</em> code instead of <em>for</em> code</li>
-    <li>🌸 Student of Kado (aka. Ikebana, the art of flower arrangment)</li>
-    <li>🐶 Her BFF is a 17 year old Westie named Murphy</li>
+    <li>
+      <span class="emoji">🧘🏻‍</span>
+      <span>buddhist/athe<em>ish</em>, daily meditator</span>
+    </li>
+    <li>
+      <span class="emoji">🌱</span>
+      <span>aspiring to veganism (with wavering success)</span>
+    </li>
+    <li>
+      <span class="emoji">🐶</span>
+      <span>her BFF is a 17 year old Westie named Murphy</span>
+    </li>
+    <li>
+      <span class="emoji">🖌</span>
+      <span>prefers to design <em>in & with</em> code instead of <em>for</em> code</span></li>
+    <li>
+      <span class="emoji">🌸</span>
+      <span>student of Kado (aka. Ikebana, the art of flower arrangment)</span>
+    </li>
   </ul>
 </div>
+
+<!-- <span class="small">*She generally prefers <em>she</em> though, if you hadn't notice that about <em>her</em> yet! ❤️</span> -->
