--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -6,28 +6,67 @@
     opacity: 1;
   }
 }
+
 :host {
   padding: 50px;
-  // position: absolute;
-  // top: 50%;
-  float: left;
-  // left: 50%;
-  width: 600px;
-  //transform: translate(-50%, -50%);
-  border-left: 1px solid rgba(white, 0.5);
-  border-radius: 3px;
-  //background: rgba(black, 0.85);
   animation: fadeIn 300ms 200ms both;
-    text-align: left;
-      line-height: 1.5em;
+  text-align: left;
+  line-height: 1.6em;
+  font-size: 1.2em;
+  display: block;
 }
 
+
 p {
-  line-height: 1.5em;
+  font-size: 2.5rem;
+  font-weight: 400;
+  line-height: 1.3em;
   text-align: left;
   margin-bottom: 30px;
+
+  em {
+    font-style: italic;
+    font-family: 'Merriweather';
+    font-size: 0.84em;
+    font-weight: 800;
+    transform: skew(-12deg);
+    display: inline-block;
+  }
 }
 
 em {
   font-style: italic;
+  font-weight: 800;
+}
+
+.fun {
+  margin-top: 50px;
+  font-family: 'roboto mono', monospace;
+  font-size: 0.75rem;
+}
+
+h3 {
+  font-weight: 800;
+}
+
+
+li {
+  display: block;
+  margin: 15px 0;
+  vertical-align: top;
+  line-height: 1em;
+}
+
+span {
+  line-height: 1em;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.emoji {
+  font-size: 1.75em;
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 15px;
+  transform: translateY(0.0334em);
 }
