--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,11 +2,16 @@
 
 $highlight: rgb(255, 0, 230);
 
-:host {
+main {
   display: block;
   color: white;
   max-width: 1000px;
-  margin: 50px auto;
+  margin: 100px auto;
+}
+
+.skyline {
+  width: calc(100vw);
+  margin: 100px 0 -60px;
 }
 
 h1,
@@ -24,10 +29,84 @@ h1 {
   font-size: 1em;
   font-weight: 300;
   font-family: 'roboto mono', monospace;
+  border-bottom: 1px solid rgba(white, 0.334);
+  padding-bottom: 50px;
 }
 
-.resume {
+@mixin tag {
+  padding: 7px 10px 3px;
+  border: 1px solid rgba(white, 0.5);
+  border-radius: 4px;
+  margin: 10px 0 0 15px;
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 0.67rem;
+  line-height: 0.67rem;
+  font-weight: 800;
+  letter-spacing: 0.05rem;
+  vertical-align: baseline;
+}
+
+.stats {
+  border-top: 1px solid rgba(white, 0.334);
+  border-bottom:  1px solid rgba(white, 0.334);
+  padding: 50px 0;
+  overflow: hidden;
+  display: flex;
+  text-align: center;
+
+  .icon {
+    width: 50px;
+    height: 50px;
+    background: rgba(white, 0.3);
+    border-radius: 50%;
+    margin: 0 auto 10px;
+  }
+
+  .resume,
+  .current,
+  .portfolio {
+    display: block;
+    padding: 20px 50px;
+
+    em {
+      font-style: italic;
+      font-weight: 700;
+    }
+
+    span {
+      @include tag;
+    }
+  }
+
+  .resume,
+  .portfolio {
+      border: 1px solid rgba(white, 0.5);
+      min-width: 150px;
+      max-width: 150px;
+      min-height: 150px;
+      max-height: 150px;
+      border-radius: 4px;
+      display: inline-block;
+      margin: 0 0 0 50px;
+      float: left;
+      padding: 20px;
+  }
+
+}
+
+.work {
   float: left;
+  padding-top: 50px;
+
+  h3 {
+    padding: 15px 50px;
+    display: block;
+    font-size: 1em;
+    font-weight: 300;
+    font-family: 'roboto mono', monospace;
+    padding-bottom: 50px;
+  }
 
   &.collapse {
     max-width: 60px;
@@ -69,75 +148,23 @@ h1 {
       border-radius: 3px;
     }
 
-    span {
-      margin-right: 10px;
-      line-height: 60px;
-      font-weight: 600;
-      letter-spacing: 0.2px;
-      transition: 200ms;
-      max-width: 1000px;
+    // span {
+    //   margin-right: 10px;
+    //   line-height: 60px;
+    //   font-weight: 600;
+    //   letter-spacing: 0.2px;
+    //   transition: 200ms;
+    //   max-width: 1000px;
+    // }
+
+    .role {
+      @include tag;
+      line-height: 0.67rem;
+      //height: 20px;
     }
   }
 
   .northstreet {
     margin-bottom: 80px;
   }
-}
-
-nav {
-  text-align: left;
-  padding: 30px 0;
-  font-family: 'roboto mono', monospace;
-  text-transform: lowercase;
-  font-weight: 400;
-  z-index: 10;
-  position: relative;
-
-  a {
-    padding: 10px 0 15px 50px;
-    transition: 120ms;
-    border-bottom: 1px solid rgba($highlight, 0);
-    position: relative;
-    display: inline-block;
-    background: rgba(black, 0.03334);
-    border-radius: 3px;
-    color: rgba(250,250,250,0.99);
-
-    &:after {
-      content: '';
-      position: absolute;
-      bottom: -50%;
-      left: -13%;
-      width: 67%;
-      height: 1px;
-      border-radius: 2px;
-      background: $highlight;
-      opacity: 0;
-      transition: 120ms;
-      transform: rotate(0deg);
-    }
-
-    &:hover {
-      color: $highlight;
-      transform: translateY(-3px) rotate(-0.5deg);
-      background: rgba(rgb(8, 26, 57), 0.1);
-
-      &:after {
-        opacity: 1;
-        height: 9px;
-        width: 167%;
-        left: -23%;
-        transform: rotate(-9deg);
-      }
-    }
-  }
-}
-
-@mixin sub-text {
-  font-size: 0.6667em;
-  font-weight: 600;
-  letter-spacing: 0.2667em;
-  text-transform: uppercase;
-  margin-bottom: 50px;
-  opacity: 0.75;
 }
