--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400');
+@import url('https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i,900,900i|Tajawal:200,300,400,500,700,800,900');
 
 $fontstack: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
@@ -12,6 +13,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   color: rgb(50, 50, 50);
+  font-family: 'Tajawal', serif;
 }
 
 @at-root {
@@ -23,6 +25,7 @@ body {
   margin: 0;
   min-height: 100vh;
   background: rgb(40, 40, 40);
+  width: 100%;
 }
 
 *, *::before, *::after {
