--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
       <span>Progressive Web Apps</span>
     </span>
   </div>
-
+<!-- 
   <div class="work"
     [ngClass]="routeCollapse()"
     @resumeAni>
@@ -58,7 +58,6 @@
     </div>
 
     <div class="sharewave">
-      <!-- <logo-sharewave></logo-sharewave> -->
       <div class="logo"></div>
       <span class="name">Sharewave</span>
       <span class="role">Product Design</span>
@@ -66,7 +65,6 @@
     </div>
 
     <div class="northstreet">
-      <!-- <logo-northstreet></logo-northstreet> -->
       <div class="logo"></div>
       <span class="name">North Street</span>
       <span class="role">Responsive Design</span>
@@ -94,7 +92,7 @@
       <a href="https://www.youtube.com/results?search_query=TEDxSLC"
       target="_blank">link</a>
     </div>
-  </div>
+  </div> -->
 </main>
 
 <img class="skyline"
