--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -47,124 +47,5 @@ h1 {
   vertical-align: baseline;
 }
 
-.stats {
-  border-top: 1px solid rgba(white, 0.334);
-  border-bottom:  1px solid rgba(white, 0.334);
-  padding: 50px 0;
-  overflow: hidden;
-  display: flex;
-  text-align: center;
-
-  .icon {
-    width: 50px;
-    height: 50px;
-    background: rgba(white, 0.3);
-    border-radius: 50%;
-    margin: 0 auto 10px;
-  }
-
-  .resume,
-  .current,
-  .portfolio {
-    display: block;
-    padding: 20px 50px;
-
-    em {
-      font-style: italic;
-      font-weight: 700;
-    }
-
-    span {
-      @include tag;
-    }
-  }
-
-  .resume,
-  .portfolio {
-      border: 1px solid rgba(white, 0.5);
-      min-width: 150px;
-      max-width: 150px;
-      min-height: 150px;
-      max-height: 150px;
-      border-radius: 4px;
-      display: inline-block;
-      margin: 0 0 0 50px;
-      float: left;
-      padding: 20px;
-  }
-
-}
-
-.work {
-  float: left;
-  padding-top: 50px;
-
-  h3 {
-    padding: 15px 50px;
-    display: block;
-    font-size: 1em;
-    font-weight: 300;
-    font-family: 'roboto mono', monospace;
-    padding-bottom: 50px;
-  }
-
-  &.collapse {
-    max-width: 60px;
-    transition: 300ms;
-    margin-right: 50px;
-
-    > div {
-      padding: 20px 0;
-      border-bottom: 1px dashed rgba(white, 0);
-    }
-
-    > div > *:first-child {
-      margin-right: 0;
-    }
-
-    > div > *:nth-child(n+2) {
-      opacity: 0;
-    }
-  }
-
-
-  > div {
-    padding: 20px 50px;
-    display: block;
-    color: white;
-    border-bottom: 1px dashed rgba(white, 0.3);
-    display: flex;
-    transition: 450ms;
-
-    > *:first-child {
-      display: inline-block;
-      width: 60px;
-      height: 60px;
-      padding: 10px;
-      display: flex;
-      margin-right: 32px;
-      justify-content: center;
-      border: 1px solid rgba(white, 0.5);
-      border-radius: 3px;
-    }
-
-    // span {
-    //   margin-right: 10px;
-    //   line-height: 60px;
-    //   font-weight: 600;
-    //   letter-spacing: 0.2px;
-    //   transition: 200ms;
-    //   max-width: 1000px;
-    // }
-
-    .role {
-      @include tag;
-      line-height: 0.67rem;
-      //height: 20px;
-    }
-  }
-
-  .northstreet {
-    margin-bottom: 80px;
-  }
-}
+@import './stats';
+@import './work';
