--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -9,7 +9,7 @@
 
 :host {
   padding: 50px;
-  animation: fadeIn 300ms 200ms both;
+  animation: fadeIn 400ms 200ms both;
   text-align: left;
   line-height: 1.6em;
   font-size: 1.2em;
@@ -39,34 +39,4 @@ em {
   font-weight: 800;
 }
 
-.fun {
-  margin-top: 50px;
-  font-family: 'roboto mono', monospace;
-  font-size: 0.75rem;
-}
-
-h3 {
-  font-weight: 800;
-}
-
-
-li {
-  display: block;
-  margin: 15px 0;
-  vertical-align: top;
-  line-height: 1em;
-}
-
-span {
-  line-height: 1em;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.emoji {
-  font-size: 1.75em;
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 15px;
-  transform: translateY(0.0334em);
-}
+@import './fun';
