move/add animation to about bullets

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,8 +5,8 @@
 <!-- <p>She has been incredibly passionate about desing from a young, and she views the discipline far beyond the little shapes on your black mirror or the geometry of a handle thoughtfully selected for a door. Design is cocerned with commuication and interaction of objects—digital and physical. And as the world spins faster, brighter, and louder, she believes the use of design thinking to simplify and elate our environments is of critical importance.</p> -->
 
 <div class="fun">
-<h3>fun facts about Sean</h3>
-  <ul>
+  <h3>fun facts about Sean</h3>
+  <ul @slideFade>
     <li>
       <span class="emoji">🧘🏻‍</span>
       <span>buddhist/athe<em>ish</em>, daily meditator</span>
