break out clock service, add all skyline imgs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
       <span>Progressive Web Apps</span>
     </span>
   </div>
-<!-- 
+<!--
   <div class="work"
     [ngClass]="routeCollapse()"
     @resumeAni>
@@ -96,5 +96,5 @@
 </main>
 
 <img class="skyline"
-  src="assets/nyc-12.png"
+  [src]="skyline()"
   alt="">
