--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,15 +10,15 @@
     <a class="resume"
       href="assets/resume.pdf"
       target="_blank">
-      <div class="icon"></div>
-      <em>download resume</em>
+      <div class="icon">👩🏻‍🎤</div>
+      <em>download my resume</em>
     </a>
 
     <a class="portfolio"
       href="mailto:hello@smcntyr.com"
       target="_blank">
-      <div class="icon"></div>
-      <em>please reach out for my portfolio</em>
+      <div class="icon">🎨</div>
+      <em>contact for my portfolio</em>
     </a>
 
     <span class="current">
