--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,15 +1,17 @@
 @keyframes fadeIn {
   0% {
     opacity: 0;
+    transform: scale(0.98);
   }
   100% {
     opacity: 1;
+    transform: scale(1);
   }
 }
 
 :host {
   padding: 50px;
-  animation: fadeIn 400ms 200ms both;
+  //animation: fadeIn 400ms 100ms both;
   text-align: left;
   line-height: 1.6em;
   font-size: 1.2em;
