--- a/src/app/stats.scss
+++ b/src/app/stats.scss
@@ -7,11 +7,10 @@
   text-align: center;
 
   .icon {
-    width: 50px;
-    height: 50px;
-    background: rgba(white, 0.3);
-    border-radius: 50%;
-    margin: 0 auto 10px;
+    margin: 0 auto 0;
+    font-size: 2em;
+    line-height: 1.3em;
+    vertical-align: text-top;
   }
 
   .resume,
@@ -41,7 +40,15 @@
       display: inline-block;
       margin: 0 0 0 50px;
       float: left;
-      padding: 20px;
+      padding: 30px 20px;
+      transition: 100ms;
+      background: rgba(white, 0);
+
+      &:hover {
+        transform: scale(1.02) translateY(-1px);
+        border: 1px solid rgba(white, 0.8);
+        background: rgba(white, 0.05);
+      }
   }
 
 }
