--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -20,11 +20,16 @@
 
 
 p {
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   font-weight: 400;
   line-height: 1.3em;
   text-align: left;
   margin-bottom: 30px;
+
+  @media screen and (min-width: 720px) {
+    font-size: 2.5rem;
+    line-height: 1.3em;
+  }
 
   em {
     font-style: italic;
