--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,26 +29,35 @@ main {
 
 .skyline {
   width: calc(100vw);
-  margin: 100px 0 -60px;
+  margin: -150px 0 -60px;
 }
 
 h1,
 .discipline {
-  padding: 15px 50px;
+  padding: 5px 50px;
   display: block;
 }
 
 h1 {
-  font-size: 2.5em;
+  font-size: 1.5em;
+  line-height: 1em;
   font-weight: 700;
+
+  @media screen and (min-width: 720px) {
+    font-size: 2.5em;
+  }
 }
 
 .discipline {
-  font-size: 1em;
+  font-size: 0.75em;
   font-weight: 300;
   font-family: 'roboto mono', monospace;
   border-bottom: 1px solid rgba(white, 0.334);
   padding-bottom: 50px;
+
+  @media screen and (min-width: 720px) {
+    font-size: 1em;
+  }
 }
 
 @mixin tag {
