--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400');
-@import url('https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i,900,900i|Tajawal:200,300,400,500,700,800,900');
+@import url('https://fonts.googleapis.com/css?family=Merriweather:900,900i|Tajawal:400,500|Roboto+Mono:400');
 
 $fontstack: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
